hq sandbox - latest/src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Annual_License_Cost__c</fullName>
        <formula>Cost_Per_License__c * (  1-Prepayment_Discount__c ) * ContractTerm  * Users__c</formula>
        <label>Annual License Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>City_State_Zip__c</fullName>
        <formula>BillingCity&amp;&quot;, &quot;&amp; BillingState&amp;&quot; &quot;&amp; BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City, State Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Per_License__c</fullName>
        <defaultValue>89</defaultValue>
        <label>Cost Per License</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_merge_field__c</fullName>
        <formula>Prepayment_Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount (merge field)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_License_Cost__c</fullName>
        <formula>Cost_Per_License__c * (  1-Prepayment_Discount__c ) * Users__c</formula>
        <label>Monthly License Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Not_Renewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not Renewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prepayment_Discount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Prepayment Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Users__c</fullName>
        <label>Users</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>